[Quirks mode only] "Do not trim trailing whitespace followed by <br>" quirk causes lines to stretch https://bugs.webkit.org/show_bug.cgi?id=139199

Reviewed by Antti Koivisto.

Remove legacy quirk (now we match blink and gecko).

(table-col-indent-crash.html change is specific to -webkit-user-modify)

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingQuirks.cpp:
(WebCore::Layout::InlineFormattingQuirks::shouldPreserveTrailingWhitespace const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingQuirks.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):

Canonical link: https://commits.webkit.org/263291@main