Source/WebCore/layout/formattingContexts/inline/InlineFormattingQuirks.cpp
@@ -37,27 +37,6 @@ InlineFormattingQuirks::InlineFormattingQuirks(const InlineFormattingContext& in
 {
 }
 
-bool InlineFormattingQuirks::shouldPreserveTrailingWhitespace(bool isInIntrinsicWidthMode, bool lineHasBidiContent, bool lineHasOverflow, bool lineEndWithLineBreak) const
-{
-    // Legacy line layout quirk: keep the trailing whitespace around when it is followed by a line break, unless the content overflows the line.
-    // This quirk however should not be applied when running intrinsic width computation.
-    // FIXME: webkit.org/b/233261
-    if (isInIntrinsicWidthMode || !layoutState().isInlineFormattingContextIntegration())
-        return false;
-    if (lineHasBidiContent)
-        return false;
-    if (lineHasOverflow)
-        return false;
-
-    auto isTextAlignRight = [&] {
-        auto textAlign = formattingContext().root().style().textAlign();
-        return textAlign == TextAlignMode::Right
-            || textAlign == TextAlignMode::WebKitRight
-            || textAlign == TextAlignMode::End;
-    };
-    return lineEndWithLineBreak && !isTextAlignRight();
-}
-
 bool InlineFormattingQuirks::trailingNonBreakingSpaceNeedsAdjustment(bool isInIntrinsicWidthMode, bool lineHasOverflow) const
 {
     if (isInIntrinsicWidthMode || !lineHasOverflow)
